updated function of reading trajectories

--- a/prolif_fingerprinting.ipynb
+++ b/prolif_fingerprinting.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f7ff931c",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,8 @@
     "import pandas as pd\n",
     "import analysis_functions\n",
     "import seaborn as sns\n",
-    "from typing import Optional"
+    "from typing import Optional\n",
+    "import simulation_names as sims"
    ]
   },
   {
@@ -47,12 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "01643517",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_unis, all_lens = analysis_functions.load_em_unis()"
+    "all_unis, all_lens = analysis_functions.load_unis(sim_list=[\n",
+    "                                                            sims.PfHT_MMV12,\n",
+    "                                                            sims.PfHT_MMV8, \n",
+    "                                                            sims.W412A_MMV12, \n",
+    "                                                            sims.GLUT1_MMV12\n",
+    "                                                            ]\n",
+    "                                                )"
    ]
   },
   {
@@ -68,21 +75,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "5305d85e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_fp_dfs = {}\n",
     "skip = 1\n",
@@ -101,8 +97,7 @@
     "                filename=f\"{condition}.replica_{n+1}.skip{skip}\",\n",
     "            )\n",
     "            temp_fp_dfs.append(df)\n",
-    "    all_fp_dfs[condition] = temp_fp_dfs\n",
-    "all_fp_dfs.pop(\"PfHT_apo\")  ## probably a better way to remove this guy, but that's ok"
+    "    all_fp_dfs[condition] = temp_fp_dfs"
    ]
   },
   {
@@ -682,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 195,
    "id": "017ffba5",
    "metadata": {},
    "outputs": [
@@ -692,7 +687,7 @@
        "\"\\nsns.stripplot(data=n_intxns, \\nx='n_interactions',\\ny='value',\\nhue= 'protein',\\nax= ax,\\ndodge=True,\\nalpha= 0.6,\\nedgecolor='black',\\nlinewidth=0.5,\\nlegend=False,\\nsize=5,\\npalette= color_l\\n)\\n\""
       ]
      },
-     "execution_count": 194,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -735,7 +730,9 @@
     "size=5,\n",
     "palette= color_l\n",
     ")\n",
-    "'''"
+    "'''\n",
+    "\n",
+    "## TODO - still not sure how to include replicas in this graph. Need to tinker"
    ]
   },
   {
