iven's great changes

--- a/sandbox_3361.ipynb
+++ b/sandbox_3361.ipynb
@@ -18,10 +18,10 @@
     "import matplotlib.pyplot as plt\n",
     "import MDAnalysis as mda\n",
     "import prolif as plf\n",
-    "import analysis_functions\n",
+    "import src.analysis_functions\n",
     "import glob\n",
-    "import simulation_names as sims\n",
-    "from MDAnalysis.analysis.rms import RMSD"
+    "import src.simulation_metadata as sims\n",
+    "from MDAnalysis.analysis.rms import RMSD\n"
    ]
   },
   {
@@ -38,8 +38,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_unis, all_lens = analysis_functions.load_unis(sim_list=[sims.PfHT_3361_crystal, sims.PfHT_3361_em],\n",
-    "                                                protonly_or_wholesys='protonly')"
+    "all_unis, all_lens = analysis_functions.load_unis(\n",
+    "    sim_list=[sims.PfHT_3361_crystal, sims.PfHT_3361_em],\n",
+    "    protonly_or_wholesys=\"protonly\",\n",
+    ")"
    ]
   },
   {
@@ -54,14 +56,14 @@
     "for name, rep_list in all_unis.items():\n",
     "    temp = []\n",
     "    for n, rep_uni in enumerate(rep_list):\n",
-    "            df = analysis_functions.get_fp_dataframe(\n",
-    "                u=rep_uni,\n",
-    "                skip=skip,\n",
-    "                run_calc=False,\n",
-    "                ligname='resname F00',\n",
-    "                filename=f\"{name}.replica_{n+1}.skip{skip}\",\n",
-    "            )\n",
-    "            temp.append(df)\n",
+    "        df = analysis_functions.get_fp_dataframe(\n",
+    "            u=rep_uni,\n",
+    "            skip=skip,\n",
+    "            run_calc=False,\n",
+    "            ligname=\"resname F00\",\n",
+    "            filename=f\"{name}.replica_{n+1}.skip{skip}\",\n",
+    "        )\n",
+    "        temp.append(df)\n",
     "    all_fp_dfs[name] = temp"
    ]
   },
@@ -83,20 +85,22 @@
     "all_RMSD_dfs = {}\n",
     "skip = 1\n",
     "\n",
-    "paths = {sims.PfHT_3361_crystal[0]:sims.PfHT_3361_crystal[1],\n",
-    "         sims.PfHT_3361_em[0]:sims.PfHT_3361_em[1]}  #TODO This is temp, need to fix to not be hard coded\n",
+    "paths = {\n",
+    "    sims.PfHT_3361_crystal[0]: sims.PfHT_3361_crystal[1],\n",
+    "    sims.PfHT_3361_em[0]: sims.PfHT_3361_em[1],\n",
+    "}  # TODO This is temp, need to fix to not be hard coded\n",
     "\n",
     "for name, rep_list in all_unis.items():\n",
     "    temp = []\n",
     "    for n, rep_uni in enumerate(rep_list):\n",
-    "            rmsd = analysis_functions.calc_rmsd(\n",
-    "                u=rep_uni,\n",
-    "                skip=skip,\n",
-    "                ref_name=f'{paths[name]}/replica_{n+1}/production/{name}.{n+1}.start.protonly.gro',\n",
-    "                groupselections=['resname F00'],\n",
-    "                run_calc=True\n",
-    "            )\n",
-    "            temp.append(rmsd)\n",
+    "        rmsd = analysis_functions.calc_rmsd(\n",
+    "            u=rep_uni,\n",
+    "            skip=skip,\n",
+    "            ref_name=f\"{paths[name]}/replica_{n+1}/production/{name}.{n+1}.start.protonly.gro\",\n",
+    "            groupselections=[\"resname F00\"],\n",
+    "            run_calc=True,\n",
+    "        )\n",
+    "        temp.append(rmsd)\n",
     "    all_RMSD_dfs[name] = temp"
    ]
   },
@@ -127,18 +131,20 @@
     }
    ],
    "source": [
-    "f, ax = plt.subplots(1,1)\n",
+    "f, ax = plt.subplots(1, 1)\n",
     "for name, rep_list in all_RMSD_dfs.items():\n",
-    "    temp = np.zeros((3,600))\n",
+    "    temp = np.zeros((3, 600))\n",
     "    for n, rep in enumerate(rep_list):\n",
-    "        temp[n,0:np.shape(rep)[0]] = rep[:,3]\n",
+    "        temp[n, 0 : np.shape(rep)[0]] = rep[:, 3]\n",
     "    ax.plot(np.mean(temp, axis=0))\n",
-    "    ax.fill_between(np.arange(0, np.shape(temp)[1]), \n",
-    "                    np.mean(temp,axis=0)-np.std(temp,axis=0), \n",
-    "                    np.mean(temp,axis=0)+np.std(temp,axis=0),\n",
-    "                    alpha=0.5,\n",
-    "                    label=name)\n",
-    "    \n",
+    "    ax.fill_between(\n",
+    "        np.arange(0, np.shape(temp)[1]),\n",
+    "        np.mean(temp, axis=0) - np.std(temp, axis=0),\n",
+    "        np.mean(temp, axis=0) + np.std(temp, axis=0),\n",
+    "        alpha=0.5,\n",
+    "        label=name,\n",
+    "    )\n",
+    "\n",
     "ax.legend()\n",
     "ax.set_xlim(0)\n",
     "ax.set_ylim(0)"
@@ -161,8 +167,8 @@
     }
    ],
    "source": [
-    "for n in range(0,3):\n",
-    "    plt.plot(all_RMSD_dfs['PfHT_3361.em'][n][:,3])"
+    "for n in range(0, 3):\n",
+    "    plt.plot(all_RMSD_dfs[\"PfHT_3361.em\"][n][:, 3])"
    ]
   },
   {
