--- a/sandbox_MMV.ipynb
+++ b/sandbox_MMV.ipynb
@@ -23,7 +23,7 @@
     "import networkx as nx\n",
     "from pyvis.network import Network\n",
     "from matplotlib import cm, colors\n",
-    "from IPython.display import IFrame"
+    "from IPython.display import IFrame\n"
    ]
   },
   {
@@ -41,9 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = all_unis['PfHT_MMV12'][0]\n",
-    "lig = u.select_atoms('resname MMV')\n",
-    "prot = u.select_atoms('protein')"
+    "u = all_unis[\"PfHT_MMV12\"][0]\n",
+    "lig = u.select_atoms(\"resname MMV\")\n",
+    "prot = u.select_atoms(\"protein\")"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "            )\n",
     "            temp_fp_dfs.append(df)\n",
     "    all_fp_dfs[condition] = temp_fp_dfs\n",
-    "all_fp_dfs.pop(\"PfHT_apo\")  ## probably a better way to remove this guy, but that's ok"
+    "all_fp_dfs.pop(\"PfHT_apo\")  ## probably a better way to remove this guy, but that's ok\n"
    ]
   },
   {
@@ -173,7 +173,7 @@
     "            width=value * width_multiplier,\n",
     "        )\n",
     "\n",
-    "    return G"
+    "    return G\n"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "outputs": [],
    "source": [
     "df = all_fp_dfs[\"PfHT_MMV12\"][0]\n",
-    "df = pd.concat([df], keys=['MMV'], names=['ligand'],axis=1)"
+    "df = pd.concat([df], keys=[\"MMV\"], names=[\"ligand\"], axis=1)"
    ]
   },
   {
@@ -218,23 +218,20 @@
     "\n",
     "\n",
     "weights = {}\n",
-    "for n,edge in enumerate(G.edges):\n",
-    "    weights[edge[1]] = list(G.edges(data=True))[n][2]['weight']\n",
+    "for n, edge in enumerate(G.edges):\n",
+    "    weights[edge[1]] = list(G.edges(data=True))[n][2][\"weight\"]\n",
     "\n",
     "node_sizes = [100]\n",
-    "node_sizes.extend(np.array(list(weights.values()))*400)\n",
+    "node_sizes.extend(np.array(list(weights.values())) * 400)\n",
     "# display graph\n",
     "net = Network(width=600, height=500, notebook=True, heading=\"\")\n",
     "nx.draw(G, with_labels=True, node_size=node_sizes)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "### for HTML viz\n",
-    "#net.from_nx(G)\n",
-    "#net.write_html(\"lig-prot_hydrophobic_graph.html\")\n",
-    "#IFrame(\"lig-prot_hydrophobic_graph.html\", width=610, height=510, cdn_resources='remote')"
+    "# net.from_nx(G)\n",
+    "# net.write_html(\"lig-prot_hydrophobic_graph.html\")\n",
+    "# IFrame(\"lig-prot_hydrophobic_graph.html\", width=610, height=510, cdn_resources='remote')"
    ]
   },
   {
@@ -282,7 +279,7 @@
     }
    ],
    "source": [
-    "weights"
+    "weights\n"
    ]
   },
   {
@@ -293,7 +290,7 @@
    "source": [
     "from prolif.plotting.network import LigNetwork\n",
     "\n",
-    "lmol = plf.Molecule.from_mda(lig)\n"
+    "lmol = plf.Molecule.from_mda(lig)"
    ]
   },
   {
@@ -317,7 +314,10 @@
     }
    ],
    "source": [
-    "LigNetwork(df=df2, lig_mol=lmol,)"
+    "LigNetwork(\n",
+    "    df=df2,\n",
+    "    lig_mol=lmol,\n",
+    ")"
    ]
   },
   {
@@ -326,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = df.droplevel(\"ligand\", axis=1)\n"
+    "df2 = df.droplevel(\"ligand\", axis=1)"
    ]
   },
   {
@@ -458,7 +458,7 @@
     }
    ],
    "source": [
-    "help(LigNetwork)"
+    "help(LigNetwork)\n"
    ]
   },
   {
@@ -479,7 +479,7 @@
     }
    ],
    "source": [
-    "lmol"
+    "lmol\n"
    ]
   },
   {
