--- a/sandbox_3361.ipynb
+++ b/sandbox_3361.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "import MDAnalysis as mda\n",
     "import prolif as plf\n",
-    "import src.analysis_functions\n",
+    "import src.analysis_functions as analysis_functions\n",
     "import glob\n",
     "import src.simulation_metadata as sims\n",
     "from MDAnalysis.analysis.rms import RMSD\n"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
